--- a/package.json
+++ b/package.json
@@ -9,9 +9,15 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/node-sass": "^4.11.0",
     "@types/react": "^16.9.19",
     "@types/react-dom": "^16.9.5",
+    "css-loader": "^3.4.2",
+    "css-modules-typescript-loader": "^4.0.0",
+    "node-sass": "^4.13.1",
+    "sass-loader": "^8.0.2",
     "source-map-loader": "^0.2.4",
+    "style-loader": "^1.1.3",
     "ts-loader": "^6.2.1",
     "typescript": "^3.7.5",
     "webpack": "^4.41.5",
