--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack",
+    "watch": "webpack --watch",
+    "start": "webpack-dev-server --open",
+    "server": "node server.js"
   },
   "author": "",
   "license": "ISC",
@@ -12,18 +16,28 @@
     "@types/node-sass": "^4.11.0",
     "@types/react": "^16.9.19",
     "@types/react-dom": "^16.9.5",
+    "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.4.2",
     "css-modules-typescript-loader": "^4.0.0",
+    "express": "^4.17.1",
+    "file-loader": "^5.0.2",
+    "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.13.1",
+    "react-hot-loader": "^4.12.19",
     "sass-loader": "^8.0.2",
     "source-map-loader": "^0.2.4",
     "style-loader": "^1.1.3",
     "ts-loader": "^6.2.1",
     "typescript": "^3.7.5",
     "webpack": "^4.41.5",
-    "webpack-cli": "^3.3.10"
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-middleware": "^3.7.2",
+    "webpack-dev-server": "^3.10.3"
   },
   "dependencies": {
+    "consolidate": "^0.15.1",
+    "ejs": "^3.0.1",
+    "html": "^1.0.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   }
