dot env 적용을 위한 html -> ejs 변경, 불필요한 플러그인 삭제

--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
     "watch": "webpack --watch",
-    "start": "webpack-dev-server --open",
     "server": "node server.js"
   },
   "author": "",
@@ -36,6 +35,7 @@
   },
   "dependencies": {
     "consolidate": "^0.15.1",
+    "dotenv": "^8.2.0",
     "ejs": "^3.0.1",
     "html": "^1.0.0",
     "react": "^16.12.0",
