--- a/package.json
+++ b/package.json
@@ -16,10 +16,8 @@
     "@types/node-sass": "^4.11.0",
     "@types/react": "^16.9.19",
     "@types/react-dom": "^16.9.5",
-    "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.4.2",
     "css-modules-typescript-loader": "^4.0.0",
-    "express": "^4.17.1",
     "file-loader": "^5.0.2",
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.13.1",
@@ -30,15 +28,14 @@
     "ts-loader": "^6.2.1",
     "typescript": "^3.7.5",
     "webpack": "^4.41.5",
-    "webpack-cli": "^3.3.10",
-    "webpack-dev-middleware": "^3.7.2",
-    "webpack-dev-server": "^3.10.3"
+    "webpack-cli": "^3.3.10"
   },
   "dependencies": {
+    "awesome-typescript-loader": "^5.2.1",
     "consolidate": "^0.15.1",
     "dotenv": "^8.2.0",
     "ejs": "^3.0.1",
-    "html": "^1.0.0",
+    "express": "^4.17.1",
     "nodemon": "^2.0.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
