--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,9 +2,9 @@
     "compilerOptions": {
         "outDir": "./dist",
         "sourceMap": true,
-        "noImplicitAny": true,
         "module": "commonjs",
         "target": "es6",
-        "jsx": "react"
+        "jsx": "react",
+        "noImplicitAny": false
     }
 }
