--- a/package.json
+++ b/package.json
@@ -13,9 +13,14 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.8.4",
+    "@babel/preset-env": "^7.8.4",
+    "@babel/preset-react": "^7.8.3",
     "@types/node-sass": "^4.11.0",
     "@types/react": "^16.9.19",
     "@types/react-dom": "^16.9.5",
+    "babel-cli": "^6.26.0",
+    "babel-loader": "^8.0.6",
     "css-loader": "^3.4.2",
     "css-modules-typescript-loader": "^4.0.0",
     "file-loader": "^5.0.2",
@@ -32,6 +37,7 @@
   },
   "dependencies": {
     "awesome-typescript-loader": "^5.2.1",
+    "babel-preset-es2015": "^6.24.1",
     "consolidate": "^0.15.1",
     "dotenv": "^8.2.0",
     "ejs": "^3.0.1",
