--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack",
+    "dev": "webpack-dev-server --env=dev --profile --colors",
     "watch": "webpack --watch",
     "server": "node server.js",
     "start": "nodemon --watch src server.js"
@@ -14,13 +14,18 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.8.4",
-    "@babel/preset-env": "^7.8.4",
-    "@babel/preset-react": "^7.8.3",
+    "@babel/preset-env": "^7.9.0",
+    "@babel/preset-react": "^7.9.4",
+    "@babel/preset-typescript": "^7.9.0",
+    "@types/express": "^4.17.4",
     "@types/node-sass": "^4.11.0",
     "@types/react": "^16.9.19",
     "@types/react-dom": "^16.9.5",
+    "@types/webpack-dev-middleware": "^3.7.0",
+    "@types/webpack-env": "^1.15.1",
+    "@types/webpack-hot-middleware": "^2.25.0",
     "babel-cli": "^6.26.0",
-    "babel-loader": "^8.0.6",
+    "babel-loader": "^8.1.0",
     "css-loader": "^3.4.2",
     "css-modules-typescript-loader": "^4.0.0",
     "file-loader": "^5.0.2",
@@ -30,22 +35,31 @@
     "sass-loader": "^8.0.2",
     "source-map-loader": "^0.2.4",
     "style-loader": "^1.1.3",
-    "ts-loader": "^6.2.1",
+    "ts-loader": "^6.2.2",
     "typescript": "^3.7.5",
     "webpack": "^4.41.5",
-    "webpack-cli": "^3.3.10"
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-middleware": "^3.7.2",
+    "webpack-dev-server": "^3.10.3",
+    "webpack-hot-middleware": "^2.25.0",
+    "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {
+    "@types/react-helmet": "^5.0.15",
+    "@types/react-router-dom": "^5.1.3",
     "awesome-typescript-loader": "^5.2.1",
     "babel-preset-es2015": "^6.24.1",
     "consolidate": "^0.15.1",
     "dotenv": "^8.2.0",
     "ejs": "^3.0.1",
     "express": "^4.17.1",
+    "kimserver-test-1": "0.0.5",
     "nodemon": "^2.0.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-helmet": "^5.2.1",
     "react-redux": "^7.2.0",
+    "react-router-dom": "^5.1.2",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3"
   }
