--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,16 @@
 {
     "compilerOptions": {
+        "strict": true,
+        "baseUrl": "./",
+        "moduleResolution": "node",
         "outDir": "./dist",
         "sourceMap": true,
         "module": "commonjs",
         "target": "es5",
-        "jsx": "react",
+        "jsx": "preserve",
         "noImplicitAny": false
-    }
+    },
+    "exclude": [
+        "node_modules"
+    ]
 }
