--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack-dev-server --env=dev --profile --colors",
-    "watch": "webpack --watch",
-    "server": "node server.js",
-    "start": "nodemon --watch src server.js"
+    "start": "npm run build:dev && node ./dist/server.js",
+    "start:wds": "webpack-dev-server --env=dev --profile --colors",
+    "watch": "rm -rf dist/ && NODE_ENV=development webpack --env=dev --watch",
+    "build:dev": "rm -rf dist/ && NODE_ENV=development npm run build:client && NODE_ENV=development npm run build:server",
+    "build:server": "webpack --env=server --progress --profile --colors",
+    "build:client": "webpack --env=client --progress --profile --colors"
   },
   "author": "",
   "license": "ISC",
@@ -17,6 +18,8 @@
     "@babel/preset-env": "^7.9.0",
     "@babel/preset-react": "^7.9.4",
     "@babel/preset-typescript": "^7.9.0",
+    "@loadable/babel-plugin": "^5.12.0",
+    "@loadable/webpack-plugin": "^5.12.0",
     "@types/express": "^4.17.4",
     "@types/node-sass": "^4.11.0",
     "@types/react": "^16.9.19",
@@ -30,6 +33,7 @@
     "css-modules-typescript-loader": "^4.0.0",
     "file-loader": "^5.0.2",
     "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.13.1",
     "react-hot-loader": "^4.12.19",
     "sass-loader": "^8.0.2",
@@ -37,6 +41,7 @@
     "style-loader": "^1.1.3",
     "ts-loader": "^6.2.2",
     "typescript": "^3.7.5",
+    "typescript-plugin-styled-components": "^1.4.4",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
     "webpack-dev-middleware": "^3.7.2",
@@ -45,16 +50,22 @@
     "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {
+    "@loadable/component": "^5.12.0",
+    "@loadable/server": "^5.12.0",
+    "@types/loadable__component": "^5.10.0",
+    "@types/loadable__server": "^5.12.1",
     "@types/react-helmet": "^5.0.15",
     "@types/react-router-dom": "^5.1.3",
     "awesome-typescript-loader": "^5.2.1",
     "babel-preset-es2015": "^6.24.1",
     "consolidate": "^0.15.1",
+    "core-js": "^2.6.11",
     "dotenv": "^8.2.0",
     "ejs": "^3.0.1",
     "express": "^4.17.1",
     "kimserver-test-1": "0.0.5",
     "nodemon": "^2.0.2",
+    "path": "^0.12.7",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
