--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
         "moduleResolution": "node",
         "outDir": "./dist",
         "sourceMap": true,
-        "module": "commonjs",
+        "module": "esnext",
         "target": "es5",
         "jsx": "preserve",
         "noImplicitAny": false
