--- a/package.json
+++ b/package.json
@@ -63,11 +63,13 @@
     "dotenv": "^8.2.0",
     "ejs": "^3.0.1",
     "express": "^4.17.1",
+    "firebase": "^7.13.2",
     "kimserver-test-1": "0.0.5",
     "nodemon": "^2.0.2",
     "path": "^0.12.7",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-google-login": "^5.1.3",
     "react-helmet": "^5.2.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
